<resources>
    <string name="app_name">Señales de trafico</string>
    <string name="signals">Señales</string>
    <string name="test">Test</string>
    <string name="priority">Prioridad</string>
    <string name="danger">Peligro</string>
    <string name="prohibition">Prohibición</string>
    <string name="obligation">Obligación</string>
    <string name="indication">Indicación</string>
    <string name="lanes">Carriles</string>
    <string name="service">Servicio</string>
    <string name="orientation">Orientación</string>
    <string name="works">Obras</string>
    <string name="orientation_and_indication">Orientación/Indicación</string>
    <string name="next">Siguiente</string>
    <string name="danger1">P1 Intersección con prioridad</string>
    <string name="danger2">P1a Intersección con prioridad sobre vía a la derecha</string>
    <string name="danger3">P1b Intersección con prioridad sobre vía a la izquierda</string>
    <string name="danger4">P1c Intersección con prioridad sobre incorporación por derecha</string>
    <string name="danger5">P1d Intersección con prioridad sobre incorporación por izquierda</string>
    <string name="danger6">P2 Intersección con prioridad de la derecha</string>
    <string name="danger7">P3 Semáforos</string>
    <string name="danger8">P4 Intersección con circulación giratoria</string>
    <string name="danger9">P5 Puente móvil</string>
    <string name="danger10">P6 Cruce de tranvía</string>
    <string name="danger11">P7 Paso a nivel con barreras</string>
    <string name="danger12">P8 Paso a nivel sin barreras</string>
    <string name="danger13">P9a Proximidad de un paso a nivel o de un puente móvil (lado derecho)</string>
    <string name="danger14">P9b Aproximación de un paso a nivel o de un puente móvil (lado derecho)</string>
    <string name="danger15">P9c Proximidad de un paso a nivel o de un puente móvil (lado derecho)</string>
    <string name="danger16">P10a Proximidad de un paso a nivel o de un puente móvil (lado izquierdo)</string>
    <string name="danger17">P10b Aproximación de un paso a nivel o de un puente móvil (lado derecho)</string>
    <string name="danger18">P10c Proximidad de un paso a nivel o de un puente móvil (lado derecho)</string>
    <string name="danger19">P11 Situación de un paso a nivel sin barreras</string>
    <string name="danger20">P11a Situación de un paso a nivel sin barreras de más de una vía férrea</string>
    <string name="danger21">P12 Aeropuerto</string>
    <string name="danger22">P13a Curva peligrosa hacia la derecha</string>
    <string name="danger23">P13b Curva peligrosa hacia la izquierda</string>
    <string name="danger24">P14a Curvas peligrosa hacia la derecha</string>
    <string name="danger25">P14b Curvas peligrosa hacia la izquierda</string>
    <string name="danger26">P15 Perfil irregular</string>
    <string name="danger27">P15a Resalto</string>
    <string name="danger28">P15b Badén</string>
    <string name="danger29">P16a Bajada peligrosa</string>
    <string name="danger30">P16b Subida con fuerte pendiente</string>
    <string name="danger31">P17 Estrechamiento de calzada</string>
    <string name="danger32">P17a Estrechamiento de calzada por la derecha</string>
    <string name="danger33">P17b  Estrechamiento de calzada por la izquierda</string>
    <string name="danger34">P18 Obras</string>
    <string name="danger35">P19 Pavimento deslizante</string>
    <string name="danger36">P20 Paso de peatones</string>
    <string name="danger37">P21 Niños</string>
    <string name="danger38">P22 Ciclistas</string>
    <string name="danger39">P23 Paso de animales domésticos</string>
    <string name="danger40">P24 Paso de animales en libertad</string>
    <string name="danger41">P25 Circulación en los dos sentidos</string>
    <string name="danger42">P26 Desprendimientos</string>
    <string name="danger43">P27 Muelle</string>
    <string name="danger44">P28 Proyección de gravilla</string>
    <string name="danger45">P29 Escalón lateral</string>
    <string name="danger46">P30 Vientos transversales</string>
    <string name="danger47">P31 Congestión</string>
    <string name="danger48">P32 Obstrucción de la calzada</string>
    <string name="danger49">P33 Visibilidad reducida</string>
    <string name="danger50">P34 Pavimento deslizante por hielo o nieve</string>
    <string name="danger51">P50 Otros peligros</string>
    <string name="priority1">R1 Ceda el paso</string>
    <string name="priority2">R2 Detención obligatoria</string>
    <string name="priority3">R3 Calzada con prioridad</string>
    <string name="priority4">R4 Fin de prioridad</string>
    <string name="priority5">R5 Prioridad al sentido contrario</string>
    <string name="priority6">R6 Prioridad respecto al sentido contrario</string>
    <string name="works1">TP3 Semáforos</string>
    <string name="works2">TP13a Curva peligrosa hacia la derecha</string>
    <string name="works3">TP13b Curva peligrosa hacia la izquierda</string>
    <string name="works4">TP14a Curvas peligrosa hacia la derecha</string>
    <string name="works5">TP14b Curvas peligrosa hacia la izquierda</string>
    <string name="works6">TP15 Perfil irregular</string>
    <string name="works7">TP15a Resalto</string>
    <string name="works8">TP15b Badén</string>
    <string name="works9">TP17 Estrechamiento de calzada</string>
    <string name="works10">TP17a Estrechamiento de calzada por la derecha</string>
    <string name="works11">TP17b  Estrechamiento de calzada por la izquierda</string>
    <string name="works12">TP18 Obras</string>
    <string name="works13">TP19 Pavimento deslizante</string>
    <string name="works14">TP25 Circulación en los dos sentidos</string>
    <string name="works15">TP26 Desprendimientos</string>
    <string name="works16">TP28 Proyección de gravilla</string>
    <string name="works17">TP30 Escalón lateral</string>
    <string name="works18">TP50 Otros peligros</string>
    <string name="works19">TR5 Prioridad al sentido contrario</string>
    <string name="works20">TR101 Entrada prohibida</string>
    <string name="works21">TR106 Entrada prohibida a vehículos destinados al transporte de  mercancias</string>
    <string name="works22">TR201 Limitación de peso</string>
    <string name="works23">TR204 Limitación de anchura</string>
    <string name="works24">TR205 Limitación de altura</string>
    <string name="works25">TR301 Velocidad máxima</string>
    <string name="works26">TR302 Giro a la derecha prohibido</string>
    <string name="works27">TR303 Giro a la izquierda prohibido</string>
    <string name="works28">TR305 Adelantamiento prohibido</string>
    <string name="works29">TR306  Adelantamiento prohibido para camiones</string>
    <string name="works30">TS52 Reducción de un carril por la derecha (de 3 a 2)</string>
    <string name="works31">TS53  Reducción de un carril por la izquierda (de 3 a 2)</string>
    <string name="works32">TS54  Reducción de un carril por la derecha (de 2 a 1)</string>
    <string name="works33">TS55  Reducción de un carril por la izquierda (de 2 a 1)</string>
    <string name="works34">TS60 Desvio de un carril por la calzada opuesta</string>
    <string name="works35">TS61 Desvio de un carril por la calzada opuesta, manteniendo otro por la de obras</string>
    <string name="works36">TS62 Desvio de dos carriles por calzada opuesta</string>
    <string name="prohibition1">R301 Velocidad máxima</string>
    <string name="prohibition2">R300 Separación mínima</string>
    <string name="prohibition3">R302 Giro a la derecha prohibido</string>
    <string name="prohibition4">R200 Prohibición de pasar sin detenerse</string>
    <string name="prohibition5">R303 Giro a la izquierda prohibido</string>
    <string name="prohibition6">R100 Circulación prohibida</string>
    <string name="prohibition7">R304 Media vuelta prohibida</string>
    <string name="prohibition8">R101 Entrada prohibida</string>
    <string name="prohibition9">R305 Adelantamiento prohibido</string>
    <string name="prohibition10">R102 Entrada prohibida a vehículos de motor</string>
    <string name="prohibition11">R306 Adelantamiento prohibido para camiones</string>
    <string name="prohibition12">R103 Entrada prohibida a vehículos de motor excepto motos de dos ruedas sin sidecar</string>
    <string name="prohibition13">R307 Parada y estacionamiento prohibido</string>
    <string name="prohibition14">R104 Entrada prohibida a motocicletas</string>
    <string name="prohibition15">R308 Estacionamiento prohibido</string>
    <string name="prohibition16">R105 Entrada prohibida a ciclomotors</string>
    <string name="prohibition17">R308a Estacionamiento prohibido los días impares</string>
    <string name="prohibition18">R106 Entrada prohibida a vehículos destinados a transporte de mercancías</string>
    <string name="prohibition19">R308b Estacionamiento prohibido los días pares</string>
    <string name="prohibition20">R107 Entrada prohibida a vehículos destinados a transporte de mercancías con mayor peso autorizado que el indicado</string>
    <string name="prohibition21">R308c Estacionamiento prohibido la primera quincena</string>
    <string name="prohibition22">R108 Entrada prohibida a vehículos que transporten mercancías peligrosas</string>
    <string name="prohibition23">R308d Estacionamiento prohibido la segunda quincena</string>
    <string name="prohibition24">R109 Entrada prohibida a vehículos que transporten mercancías explosivas o inflamables</string>
    <string name="prohibition25">R309 Zona de estacionamiento ilimitado</string>
    <string name="prohibition26">R110 Entrada prohibida a vehículos que transporten productos contaminantes del agua</string>
    <string name="prohibition27">R310 Advertencias acústicas prohibidas</string>
    <string name="prohibition28">R111 Entrada prohibida a vehículos agrícolas de motor</string>
    <string name="prohibition29">R112 Entrada prohibida a vehículos de motor con remolque, que no sea un semirremolque o un remolque de un solo eje</string>
    <string name="prohibition30">R113 Entrada prohibida a vehículos de tracción animal</string>
    <string name="prohibition31">R114 Entrada prohibida a ciclos</string>
    <string name="prohibition32">R115 Entrada prohibida a carros de mano</string>
    <string name="prohibition33">R116 Entrada prohibida a peatones</string>
    <string name="prohibition34">R117 Entrada prohibida a animales de montura</string>
    <string name="prohibition35">R201 Limitación de peso</string>
    <string name="prohibition36">R202 Limitación de peso por eje</string>
    <string name="prohibition37">R203 Limitación de longitud</string>
    <string name="prohibition38">R204 Limitación de anchura</string>
    <string name="prohibition39">R205 Limitación de altura</string>
    <string name="orientation1">S1 Autopista</string>
    <string name="orientation2">S1a Autovía</string>
    <string name="orientation3">S1b Vía rápida</string>
    <string name="orientation4">S2 Fin de autopista</string>
    <string name="orientation5">S2a Fin de autovía</string>
    <string name="orientation6">S2b Fin de vía rápida</string>
    <string name="orientation7">S3 Vía para automóviles</string>
    <string name="orientation8">S4 Fin de vía para automóviles</string>
    <string name="orientation9">S5 Túnel</string>
    <string name="orientation10">S6 Fin de túnel</string>
    <string name="orientation11">S7 Velocidad máxima aconsejada</string>
    <string name="orientation12">S8 Fin de velocidad máxima aconsejada</string>
    <string name="orientation13">S9 Intervalo aconsejado de velocidades</string>
    <string name="orientation14">S10 Fin de intervalo aconsejado de velocidades</string>
    <string name="orientation15">S11 Calzada de sentido único</string>
    <string name="orientation16">S11a Calzada de sentido único</string>
    <string name="banner_ad_unit_id">ca-app-pub-1374738609679187/3958311919</string>
</resources>